feat: create login page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,10 @@
 <mat-toolbar color="primary">
+  <mat-icon
+    aria-hidden="false"
+    aria-label="play"
+    fontIcon="menu_book"
+    style="margin-right: 8px"
+  ></mat-icon>
   <span>Edu Predict</span>
 </mat-toolbar>
 <router-outlet></router-outlet>
