--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -1,1 +1,41 @@
-<p>login works!</p>
+<div class="container">
+  <mat-card>
+    <h1 align="justify">
+      Uma forma favorável de evitar a desistência e mostrar a nossa presença!
+    </h1>
+    <h3 align="justify">
+      Em média, 17% dos estudantes desistem de seus cursos de graduação. Alguns
+      o fazem por vontade própria, mas a grande maioria enfrenta dificuldades de
+      ordem econômica, social, física ou psicológica. E você? Já refletiu sobre
+      como poderia contribuir para reduzir essa porcentagem?
+    </h3>
+    <mat-card-content>
+      <img src="assets/education.svg" alt="Minha Figura" height="50%" />
+      <button mat-button color="primary">
+        <mat-icon
+          aria-hidden="false"
+          aria-label="play"
+          fontIcon="play_circle_filled"
+        ></mat-icon>
+        Como usar esta ferramenta?
+      </button>
+    </mat-card-content>
+  </mat-card>
+  <mat-card>
+    <mat-card-title align="center">Login</mat-card-title>
+    <mat-card-subtitle align="center"
+      >Utilize seu email institucional</mat-card-subtitle
+    >
+    <mat-card-content>
+      <mat-form-field appearance="fill">
+        <mat-label>Email</mat-label>
+        <input matInput />
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>Senha</mat-label>
+        <input matInput />
+      </mat-form-field>
+      <button mat-raised-button color="primary">Entrar</button>
+    </mat-card-content>
+  </mat-card>
+</div>
