refactor: style changes

--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -1,17 +1,19 @@
 <div class="container">
   <mat-card>
-    <h1 align="justify">
-      Uma forma favorável de evitar a desistência e mostrar a nossa presença!
-    </h1>
-    <h3 align="justify">
-      Em média, 17% dos estudantes desistem de seus cursos de graduação. Alguns
-      o fazem por vontade própria, mas a grande maioria enfrenta dificuldades de
-      ordem econômica, social, física ou psicológica. E você? Já refletiu sobre
-      como poderia contribuir para reduzir essa porcentagem?
-    </h3>
+    <mat-card-header>
+      <mat-card-title align="justify">
+        Uma forma favorável de evitar a desistência e mostrar a nossa presença!
+      </mat-card-title>
+      <mat-card-subtitle align="justify">
+        Em média, 17% dos estudantes desistem de seus cursos de graduação.
+        Alguns o fazem por vontade própria, mas a grande maioria enfrenta
+        dificuldades de ordem econômica, social, física ou psicológica. E você?
+        Já refletiu sobre como poderia contribuir para reduzir essa porcentagem?
+      </mat-card-subtitle>
+    </mat-card-header>
     <mat-card-content>
-      <img src="assets/education.svg" alt="Minha Figura" height="50%" />
-      <button mat-button color="primary">
+      <img src="assets/education.svg" alt="Login" />
+      <button mat-button color="primary" class="action-button">
         <mat-icon
           aria-hidden="false"
           aria-label="play"
@@ -22,10 +24,12 @@
     </mat-card-content>
   </mat-card>
   <mat-card>
-    <mat-card-title align="center">Login</mat-card-title>
-    <mat-card-subtitle align="center"
-      >Utilize seu email institucional</mat-card-subtitle
-    >
+    <mat-card-header>
+      <mat-card-title align="center">Login</mat-card-title>
+      <mat-card-subtitle align="center"
+        >Utilize seu email institucional</mat-card-subtitle
+      >
+    </mat-card-header>
     <mat-card-content>
       <mat-form-field appearance="fill">
         <mat-label>Email</mat-label>
