--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -1,19 +1,17 @@
-<div class="container">
-  <mat-card>
-    <mat-card-header>
-      <mat-card-title align="justify">
-        Uma forma favorável de evitar a desistência e mostrar a nossa presença!
-      </mat-card-title>
-      <mat-card-subtitle align="justify">
-        Em média, 17% dos estudantes desistem de seus cursos de graduação.
-        Alguns o fazem por vontade própria, mas a grande maioria enfrenta
-        dificuldades de ordem econômica, social, física ou psicológica. E você?
-        Já refletiu sobre como poderia contribuir para reduzir essa porcentagem?
-      </mat-card-subtitle>
-    </mat-card-header>
+<div class="c-container">
+  <mat-card class="c-card">
+    <mat-card-title>
+      Uma forma favorável de evitar a desistência e mostrar a nossa presença!
+    </mat-card-title>
+    <mat-card-subtitle align="justify">
+      Em média, 17% dos estudantes desistem de seus cursos de graduação. Alguns
+      o fazem por vontade própria, mas a grande maioria enfrenta dificuldades de
+      ordem econômica, social, física ou psicológica. E você? Já refletiu sobre
+      como poderia contribuir para reduzir essa porcentagem?
+    </mat-card-subtitle>
     <mat-card-content>
       <img src="assets/education.svg" alt="Login" />
-      <button mat-button color="primary" class="action-button">
+      <button mat-button color="primary">
         <mat-icon
           aria-hidden="false"
           aria-label="play"
@@ -23,13 +21,11 @@
       </button>
     </mat-card-content>
   </mat-card>
-  <mat-card>
-    <mat-card-header>
-      <mat-card-title align="center">Login</mat-card-title>
-      <mat-card-subtitle align="center"
-        >Utilize seu email institucional</mat-card-subtitle
-      >
-    </mat-card-header>
+  <mat-card class="c-card">
+    <mat-card-title align="center">Login</mat-card-title>
+    <mat-card-subtitle align="center"
+      >Utilize seu email institucional</mat-card-subtitle
+    >
     <mat-card-content>
       <mat-form-field appearance="fill">
         <mat-label>Email</mat-label>
@@ -37,9 +33,10 @@
       </mat-form-field>
       <mat-form-field appearance="fill">
         <mat-label>Senha</mat-label>
-        <input matInput />
+        <input matInput type="password" />
       </mat-form-field>
       <button mat-raised-button color="primary">Entrar</button>
+      <button mat-button color="primary">Esqueceu a senha?</button>
     </mat-card-content>
   </mat-card>
 </div>
