--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import '@angular/material/theming';
+@import 'theme/utilities.scss';
+@import 'theme/components.scss';
 @include mat-core();
 
 $custom-app-primary: mat-palette($mat-blue);
