fix: adjust subtitle line height

--- a/src/theme/components/card.scss
+++ b/src/theme/components/card.scss
@@ -12,6 +12,7 @@
   mat-card-subtitle {
     font-size: 1vw;
     margin-bottom: var(--space-regular);
+    line-height: 1.5vw;
   }
 
   mat-card-content {
