--- a/src/app/auth/send-recover-email/send-recover-email.component.html
+++ b/src/app/auth/send-recover-email/send-recover-email.component.html
@@ -1,19 +1,13 @@
 <div class="c-container">
   <mat-card class="c-card">
-    <mat-card-title align="center">
-      Digite o email institucional cadastrado
-    </mat-card-title>
+    <mat-card-title align="center"> Digite o email institucional cadastrado </mat-card-title>
     <mat-card-content>
       <mat-form-field appearance="fill">
         <mat-label>Email</mat-label>
         <input matInput type="email" />
       </mat-form-field>
-      <button mat-raised-button color="primary" (click)="goToResetPassword()">
-        Enviar
-      </button>
-      <button mat-button color="primary" (click)="goToLoginPage()">
-        Voltar ao login
-      </button>
+      <button mat-flat-button color="primary" (click)="goToResetPassword()">Enviar</button>
+      <button mat-button color="primary" (click)="goToLoginPage()">Voltar ao login</button>
     </mat-card-content>
   </mat-card>
 </div>
