fix: align login page text

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,7 +1,9 @@
 <div class="c-container">
   <mat-card class="c-card">
-    <mat-card-title> Uma forma favorável de evitar a desistência e mostrar a nossa presença! </mat-card-title>
-    <mat-card-subtitle>
+    <mat-card-title class="u-text-align--left">
+      Uma forma favorável de evitar a desistência e mostrar a nossa presença!
+    </mat-card-title>
+    <mat-card-subtitle class="u-text-align--justify">
       Em média, 17% dos estudantes desistem de seus cursos de graduação. Alguns o fazem por vontade própria, mas a
       grande maioria enfrenta dificuldades de ordem econômica, social, física ou psicológica. E você? Já refletiu
       sobre como poderia contribuir para reduzir essa porcentagem?
@@ -15,8 +17,8 @@
     </mat-card-content>
   </mat-card>
   <mat-card class="c-card">
-    <mat-card-title>Login</mat-card-title>
-    <mat-card-subtitle>Utilize seu email institucional</mat-card-subtitle>
+    <mat-card-title class="u-text-align--center">Login</mat-card-title>
+    <mat-card-subtitle class="u-text-align--center">Utilize seu email institucional</mat-card-subtitle>
     <mat-card-content>
       <form class="u-display--flex u-flex-direction--column" [formGroup]="form">
         <mat-form-field appearance="fill">
