feat: add logout functionality

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,7 +15,7 @@
       >Cadastrar</a
     >
   </div>
-  <a class="u-display--flex u-flex-align--center">
+  <a routerLink="#" class="u-display--flex u-flex-align--center" (click)="logout()">
     <mat-icon aria-hidden="false" aria-label="logout" fontIcon="logout" style="margin-right: 8px"></mat-icon>
     <span class="u-font-size--md">Sair</span>
   </a>
