refactor: center and update labels

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -18,7 +18,7 @@
   </mat-card>
   <mat-card class="c-card">
     <mat-card-title class="u-text-align--center">Login</mat-card-title>
-    <mat-card-subtitle class="u-text-align--center">Utilize seu email institucional</mat-card-subtitle>
+    <mat-card-subtitle class="u-text-align--center">Utilize o seu email institucional da UFPR</mat-card-subtitle>
     <mat-card-content>
       <form class="u-display--flex u-flex-direction--column" [formGroup]="form">
         <mat-form-field appearance="fill">
