--- a/src/app/auth/send-recover-email/send-recover-email.component.html
+++ b/src/app/auth/send-recover-email/send-recover-email.component.html
@@ -1,6 +1,6 @@
 <div class="c-container">
   <mat-card class="c-card">
-    <mat-card-title align="center"> Digite o email institucional cadastrado </mat-card-title>
+    <mat-card-title class="u-text-align--center"> Digite o email institucional cadastrado </mat-card-title>
     <mat-card-content>
       <mat-form-field appearance="fill">
         <mat-label>Email</mat-label>
