--- a/src/app/auth/reset-password/reset-password.component.html
+++ b/src/app/auth/reset-password/reset-password.component.html
@@ -1,6 +1,6 @@
 <div class="c-container">
   <mat-card class="c-card">
-    <mat-card-title align="center"> Redefinir senha </mat-card-title>
+    <mat-card-title class="u-text-align--center"> Redefinir senha </mat-card-title>
     <mat-card-content>
       <mat-form-field appearance="fill">
         <mat-label>Nova senha</mat-label>
@@ -11,9 +11,7 @@
         <input matInput type="password" />
       </mat-form-field>
       <button mat-raised-button color="primary">Redefinir</button>
-      <button mat-button color="primary" (click)="goToLoginPage()">
-        Voltar ao login
-      </button>
+      <button mat-button color="primary" (click)="goToLoginPage()">Voltar ao login</button>
     </mat-card-content>
   </mat-card>
 </div>
