--- a/src/app/home/create-user/create-user.component.html
+++ b/src/app/home/create-user/create-user.component.html
@@ -1,1 +1,44 @@
-<p>create-user works!</p>
+<div class="c-container">
+  <mat-card class="c-card">
+    <mat-card-content>
+      <form class="u-display--flex u-flex-direction--column" [formGroup]="form">
+        <mat-form-field appearance="fill">
+          <mat-label>Nome</mat-label>
+          <input matInput type="text" id="firstName" formControlName="firstName" required />
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Sobrenome</mat-label>
+          <input matInput type="text" id="lastName" formControlName="lastName" required />
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Email instituicional</mat-label>
+          <input matInput type="email" id="email" formControlName="email" required />
+        </mat-form-field>
+      </form>
+      <form class="u-display--flex u-flex-direction--column" [formGroup]="passwordForm">
+        <mat-form-field appearance="fill">
+          <mat-label>Senha</mat-label>
+          <input matInput type="password" id="password" formControlName="password" required />
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Confirmar senha</mat-label>
+          <input
+            matInput
+            type="password"
+            id="password"
+            formControlName="confirmPassword"
+            required
+            [errorStateMatcher]="matcher" />
+        </mat-form-field>
+        <button
+          mat-flat-button
+          type="submit"
+          color="primary"
+          [disabled]="!form.valid || !passwordForm.valid"
+          (click)="submitUser()">
+          Cadastrar
+        </button>
+      </form>
+    </mat-card-content>
+  </mat-card>
+</div>
