feat: add title to create user page

--- a/src/app/home/create-user/create-user.component.html
+++ b/src/app/home/create-user/create-user.component.html
@@ -1,5 +1,6 @@
 <div class="c-container">
   <mat-card class="c-card">
+    <mat-card-title class="u-text-align--center">Cadastrar Usuário</mat-card-title>
     <mat-card-content>
       <form class="u-display--flex u-flex-direction--column" [formGroup]="form">
         <mat-form-field appearance="fill">
