--- a/src/app/auth/send-recover-email/send-recover-email.component.html
+++ b/src/app/auth/send-recover-email/send-recover-email.component.html
@@ -6,7 +6,7 @@
         <mat-label>Email</mat-label>
         <input matInput type="email" />
       </mat-form-field>
-      <button mat-flat-button color="primary" (click)="goToResetPassword()">Enviar</button>
+      <button mat-flat-button color="primary" (click)="goToSetPassword()">Enviar</button>
       <button mat-button color="primary" (click)="goToLoginPage()">Voltar ao login</button>
     </mat-card-content>
   </mat-card>
