feat: move password logic to set-password component

--- a/src/app/auth/set-password/set-password.component.html
+++ b/src/app/auth/set-password/set-password.component.html
@@ -2,16 +2,37 @@
   <mat-card class="c-card">
     <mat-card-title class="u-text-align--center"> Redefinir senha </mat-card-title>
     <mat-card-content>
-      <mat-form-field appearance="fill">
-        <mat-label>Nova senha</mat-label>
-        <input matInput type="password" />
-      </mat-form-field>
-      <mat-form-field appearance="fill">
-        <mat-label>Confirmar nova senha</mat-label>
-        <input matInput type="password" />
-      </mat-form-field>
-      <button mat-raised-button color="primary">Redefinir</button>
-      <button mat-button color="primary" (click)="goToLoginPage()">Voltar ao login</button>
+      <form class="u-display--flex u-flex-direction--column" [formGroup]="form">
+        <mat-form-field appearance="fill">
+          <mat-label>Senha</mat-label>
+          <input matInput type="password" id="password" formControlName="password" required />
+          <mat-error *ngIf="form.hasError('required', 'password')"> O campo senha é obrigatório </mat-error>
+          <mat-error *ngIf="form.hasError('minlength', 'password')">
+            O campo senha deve conter no mínimo seis caracteres
+          </mat-error>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Confirmar senha</mat-label>
+          <input
+            matInput
+            type="password"
+            id="confirmPassword"
+            formControlName="confirmPassword"
+            [errorStateMatcher]="matcher" />
+          <mat-error *ngIf="form.hasError('notSame')">As senhas não correspondem</mat-error>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Código de verificação </mat-label>
+          <input matInput type="text" id="verificationCode" formControlName="verificationCode" required />
+          <mat-error *ngIf="form.hasError('required', 'password')">
+            O campo código de verificação é obrigatório
+          </mat-error>
+        </mat-form-field>
+        <button mat-flat-button type="submit" color="primary" [disabled]="!form.valid" (click)="submitPassword()">
+          Definir
+        </button>
+        <button mat-button color="primary" (click)="goToLoginPage()">Voltar ao login</button>
+      </form>
     </mat-card-content>
   </mat-card>
 </div>
