--- a/src/app/auth/set-password/set-password.component.html
+++ b/src/app/auth/set-password/set-password.component.html
@@ -1,8 +1,15 @@
 <div class="c-container">
   <mat-card class="c-card">
-    <mat-card-title class="u-text-align--center"> Redefinir senha </mat-card-title>
+    <mat-card-title class="u-text-align--center"> Definir senha </mat-card-title>
     <mat-card-content>
       <form class="u-display--flex u-flex-direction--column" [formGroup]="form">
+        <mat-form-field appearance="fill">
+          <mat-label>Código de verificação </mat-label>
+          <input matInput type="text" id="verificationCode" formControlName="verificationCode" required />
+          <mat-error *ngIf="form.hasError('required', 'password')">
+            O campo código de verificação é obrigatório
+          </mat-error>
+        </mat-form-field>
         <mat-form-field appearance="fill">
           <mat-label>Senha</mat-label>
           <input matInput type="password" id="password" formControlName="password" required />
@@ -20,13 +27,6 @@
             formControlName="confirmPassword"
             [errorStateMatcher]="matcher" />
           <mat-error *ngIf="form.hasError('notSame')">As senhas não correspondem</mat-error>
-        </mat-form-field>
-        <mat-form-field appearance="fill">
-          <mat-label>Código de verificação </mat-label>
-          <input matInput type="text" id="verificationCode" formControlName="verificationCode" required />
-          <mat-error *ngIf="form.hasError('required', 'password')">
-            O campo código de verificação é obrigatório
-          </mat-error>
         </mat-form-field>
         <button mat-flat-button type="submit" color="primary" [disabled]="!form.valid" (click)="submitPassword()">
           Definir
