feat: create custom button with spinner

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -29,9 +29,12 @@
           <mat-label>Senha</mat-label>
           <input matInput type="password" id="password" formControlName="password" required />
         </mat-form-field>
-        <button mat-flat-button type="submit" color="primary" [disabled]="!form.valid" (click)="submitLogin()">
-          Entrar
-        </button>
+        <app-button
+          class="u-display--flex"
+          label="Entrar"
+          [disabled]="!form.valid"
+          (click)="submitLogin()"
+          [loading]="isLoading"></app-button>
         <button mat-button type="button" color="primary" (click)="goToRecoverPage()">Esqueceu a senha?</button>
       </form>
     </mat-card-content>
