--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@
 @include mat-core();
 
 $custom-app-primary: mat-palette($mat-blue);
-$custom-app-secondary: mat-palette($mat-indigo, A200, A400, 700);
+$custom-app-secondary: mat-palette($mat-grey, A100); // A100 is white in the grey palette
 $custom-app-warn: mat-palette($mat-red);
 
 $custom-theme: mat-light-theme($custom-app-primary,
