feat: use new button on authentication pages

--- a/src/app/auth/set-password/set-password.component.html
+++ b/src/app/auth/set-password/set-password.component.html
@@ -28,9 +28,12 @@
             [errorStateMatcher]="matcher" />
           <mat-error *ngIf="form.hasError('notSame')">As senhas não correspondem</mat-error>
         </mat-form-field>
-        <button mat-flat-button type="submit" color="primary" [disabled]="!form.valid" (click)="submitPassword()">
-          Definir
-        </button>
+        <app-button
+          class="u-display--flex"
+          label="Salvar"
+          [disabled]="!form.valid"
+          (click)="submitPassword()"
+          [loading]="isLoading"></app-button>
         <button mat-button color="primary" (click)="goToLoginPage()">Voltar ao login</button>
       </form>
     </mat-card-content>
