refactor: layout adjustments

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,24 +1,17 @@
 <div class="c-container">
   <mat-card class="c-card">
-    <mat-card-title class="u-text-align--left">
-      Uma forma favorável de evitar a desistência e mostrar a nossa presença!
-    </mat-card-title>
+    <mat-card-title class="u-text-align--center"> Boas-vindas ao Edu Predict! </mat-card-title>
     <mat-card-subtitle class="u-text-align--justify">
-      Em média, 17% dos estudantes desistem de seus cursos de graduação. Alguns o fazem por vontade própria, mas a
-      grande maioria enfrenta dificuldades de ordem econômica, social, física ou psicológica. E você? Já refletiu
-      sobre como poderia contribuir para reduzir essa porcentagem?
+      Este é o Edu Predict, um projeto que usa Machine Learning para determinar um índice de potencial evasão de
+      estudantes da UFPR.
     </mat-card-subtitle>
     <mat-card-content>
       <img src="assets/education.svg" alt="Login" />
-      <button mat-button color="primary">
-        <mat-icon aria-hidden="false" aria-label="play" fontIcon="play_circle_filled"></mat-icon>
-        Como usar esta ferramenta?
-      </button>
     </mat-card-content>
   </mat-card>
   <mat-card class="c-card">
     <mat-card-title class="u-text-align--center">Login</mat-card-title>
-    <mat-card-subtitle class="u-text-align--center">Utilize o seu email institucional da UFPR</mat-card-subtitle>
+    <mat-card-subtitle class="u-text-align--center">Utilize seu email institucional da UFPR</mat-card-subtitle>
     <mat-card-content>
       <form class="u-display--flex u-flex-direction--column" [formGroup]="form">
         <mat-form-field appearance="fill">
