feat: add labels inside chart

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="c-container">
   <mat-card class="c-card">
     <mat-card-title class="u-text-align--center"> Boas-vindas ao Edu Predict! </mat-card-title>
-    <mat-card-subtitle class="u-text-align--justify">
+    <mat-card-subtitle class="u-text-align--center">
       Este é o Edu Predict, um projeto que usa Machine Learning para determinar um índice de potencial evasão de
       estudantes da UFPR.
     </mat-card-subtitle>
